--- a/helm-chart/delta-task/templates/ingress.yaml
+++ b/helm-chart/delta-task/templates/ingress.yaml
@@ -1,16 +1,16 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "delta-task.fullname" . }}
+  name: {{ .Release.Name }}
 spec:
   rules:
-    - host: {{ .Values.host | quote }}
+    - host: {{ .Values.ingress.host | quote }}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{ include "delta-task.fullname" $ }}
+                name: {{ .Release.Name }}
                 port:
-                  number: {{ $.Values.service.port }}
+                  number: {{ $.Values.service.targetPort }}
