--- a/helm-chart/delta-task/templates/service.yaml
+++ b/helm-chart/delta-task/templates/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "delta-task.fullname" . }}
+  name: {{ .Release.Name }}
   labels:
     {{- include "delta-task.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
       name: http
   selector:
