--- a/helm-chart/delta-task/templates/service.yaml
+++ b/helm-chart/delta-task/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ .Release.Name }}
   labels:
-    {{- include "delta-task.labels" . | nindent 4 }}
+    app: {{ .Release.Name }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "delta-task.selectorLabels" . | nindent 4 }}
+    app: {{ .Release.Name }}
