--- a/helm-chart/delta-task/templates/ingress.yaml
+++ b/helm-chart/delta-task/templates/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: {{ .Release.Name }}
 spec:
+  ingressClassName: {{ .Values.ingress.className | quote }}
   rules:
     - host: {{ .Values.ingress.host | quote }}
       http:
@@ -13,4 +14,4 @@ spec:
               service:
                 name: {{ .Release.Name }}
                 port:
-                  number: {{ $.Values.service.targetPort }}
+                  number: {{ $.Values.service.port }}
