--- a/helm-chart/delta-task/templates/tests/test-connection.yaml
+++ b/helm-chart/delta-task/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "delta-task.fullname" . }}-test-connection"
+  name: "{{ .Release.Name }}-test-connection"
   labels:
-    {{- include "delta-task.labels" . | nindent 4 }}
+    app: "{{ .Release.Name }}"
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "delta-task.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ .Release.Name }}:{{ .Values.service.port }}']
   restartPolicy: Never
