--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -7,14 +7,18 @@ on:
     branches: [$default-branch]
 
 jobs:
-  build:
+  unit-tests:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      - uses: actions/setup-go@v4
+        with:
+          go-version: "1.24.2"
 
-      - name: Test resulting app
+      - name: Build
+        run: go build -v ./...
+
+      - name: Unit tests
         run: go test -v ./...
