--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -1,24 +1,24 @@
-name: Docker Image CI
+name: Unit tests
 
 on:
   push:
-    branches: [$default-branch]
+    branches: ["main"]
   pull_request:
-    branches: [$default-branch]
+    branches: ["main"]
 
 jobs:
-  unit-tests:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-go@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
           go-version: "1.24.2"
 
       - name: Build
         run: go build -v ./...
 
-      - name: Unit tests
+      - name: Test
         run: go test -v ./...
