--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -1,15 +1,16 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+  workflow_run:
+    workflows:
+      - "Unit tests"
+    branches:
+      - "main"
+    types:
+      - "completed"
 
 jobs:
   build-image:
-    needs: unit-tests
-
     runs-on: ubuntu-latest
 
     steps:
