--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -1,13 +1,7 @@
 name: Docker Image CI
 
 on:
-  workflow_run:
-    workflows:
-      - "Unit tests"
-    branches:
-      - "main"
-    types:
-      - "completed"
+  workflow_call:
 
 jobs:
   build-image:
