--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -9,6 +9,6 @@ on:
 jobs:
   unit-tests:
     uses: ./.github/workflows/unit-tests.yaml
-
-  build-image:
-    uses: ./.github/workflows/docker-image-build.yaml
+#
+#   build-image:
+#     uses: ./.github/workflows/docker-image-build.yaml
