--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -11,4 +11,5 @@ jobs:
     uses: ./.github/workflows/unit-tests.yaml
 
   build-image:
+    needs: unit-tests
     uses: ./.github/workflows/docker-image-build.yaml
