--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -4,10 +4,16 @@ on:
   workflow_call:
 
 jobs:
-  build-image:
+  build-image-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        #TODO: make sure it does not break on PRs
+        # Search github.ref_name
+        # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#github-context
+        run: docker build . --file Dockerfile --tag "kairixir/hello-world-go:${{ github.ref_name || testing }}"
+
+      - name: Output docker info
+        run: docker image ls
