--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -13,7 +13,7 @@ jobs:
         #TODO: make sure it does not break on PRs
         # Search github.ref_name
         # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#github-context
-        run: docker build . --file Dockerfile --tag "kairixir/hello-world-go:${{ github.ref_name || testing }}"
+        run: docker build . --file Dockerfile --tag "kairixir/hello-world-go:${{ github.ref_name }}"
 
       - name: Output docker info
         run: docker image ls
