--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -15,5 +15,10 @@ jobs:
         # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#github-context
         run: docker build . --file Dockerfile --tag "kairixir/hello-world-go:${{ github.ref_name }}"
 
-      - name: Output docker info
-        run: docker image ls
+      - name: Push Docker image to DokcerHub
+        with:
+          DOCKERHUB_TOKEN: ${{ secrets.DELTA_TASK_DOCKERHUB_PUSH_TOKEN }}
+
+        run: |
+          docker login -u kairixir -p "$DOCKERHUB_TOKEN" 
+          docker push "kairixir/hello-world-go:${{ github.ref_name }}"
