--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -14,6 +14,7 @@ jobs:
         # Search github.ref_name
         # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#github-context
         # run: docker build . --file Dockerfile --tag "kairixir/hello-world-go:${{ github.ref_name }}"
+        run: echo "skipped"
 
       - name: Push Docker image to DokcerHub
         env:
