--- a/.github/workflows/build-test-deploy-main.yaml
+++ b/.github/workflows/build-test-deploy-main.yaml
@@ -7,9 +7,9 @@ on:
     branches: ["main"]
 
 jobs:
-  unit-tests:
-    uses: ./.github/workflows/unit-tests.yaml
+  # unit-tests:
+  #   uses: ./.github/workflows/unit-tests.yaml
 
   build-image:
-    needs: unit-tests
+    #  needs: unit-tests
     uses: ./.github/workflows/docker-image-build.yaml
