fix: secrets working

--- a/.github/workflows/build-test-deploy-main.yaml
+++ b/.github/workflows/build-test-deploy-main.yaml
@@ -13,3 +13,5 @@ jobs:
   build-image:
     needs: unit-tests
     uses: ./.github/workflows/docker-image-build.yaml
+    secrets:
+      dockerhub_token: ${{ secrets.DELTA_TASK_DOCKERHUB_PUSH_TOKEN }}
