--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -2,6 +2,9 @@ name: Docker Image CI
 
 on:
   workflow_call:
+    secrets:
+      dockerhub_token:
+        required: true
 
 jobs:
   build-image-and-push:
@@ -17,7 +20,7 @@ jobs:
 
       - name: Push Docker image to DokcerHub
         env:
-          DOCKERHUB_TOKEN: ${{ secrets.DELTA_TASK_DOCKERHUB_PUSH_TOKEN }}
+          DOCKERHUB_TOKEN: ${{ secrets.dockerhub_token }}
 
         run: |
           docker login -u kairixir -p "$DOCKERHUB_TOKEN" 
