Revert "fix: secrets working"

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -2,9 +2,6 @@ name: Docker Image CI
 
 on:
   workflow_call:
-    secrets:
-      dockerhub_token:
-        required: true
 
 jobs:
   build-image-and-push:
@@ -21,7 +18,7 @@ jobs:
 
       - name: Push Docker image to DokcerHub
         env:
-          DOCKERHUB_TOKEN: ${{ secrets.dockerhub_token }}
+          DOCKERHUB_TOKEN: ${{ secrets.DELTA_TASK_DOCKERHUB_PUSH_TOKEN }}
 
         run: |
           echo "$DOCKERHUB_TOKEN"
