Revert "debug: skip"
This reverts commit 3f048e2520cd98afc1291f15f79c40bff95717c7.

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -21,6 +21,6 @@ jobs:
           DOCKERHUB_TOKEN: ${{ secrets.DELTA_TASK_DOCKERHUB_PUSH_TOKEN }}
 
         run: |
-          echo "$DOCKERHUB_TOKEN"
+          echo "DOCKERHUB_TOKEN"
           # docker login -u kairixir -p "$DOCKERHUB_TOKEN" 
           # docker push "kairixir/hello-world-go:${{ github.ref_name }}"
