--- a/.github/workflows/build-test-deploy-main.yaml
+++ b/.github/workflows/build-test-deploy-main.yaml
@@ -2,9 +2,9 @@ name: "Build test and deploy app on main"
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "testing-ci"]
   pull_request:
-    branches: ["main"]
+    branches: ["main", "testing-ci"]
 
 jobs:
   unit-tests:
