ci: run system tests in detached mode

--- a/.github/workflows/system-tests.yaml
+++ b/.github/workflows/system-tests.yaml
@@ -12,7 +12,7 @@ jobs:
         run: |
           apk add curl
           docker pull "kairixir/hello-world-go:${{ github.ref_name }}"
-          docker run -p 8080:8080 "kairixir/hello-world-go:${{ github.ref_name }}"
+          docker run -d -p 8080:8080 "kairixir/hello-world-go:${{ github.ref_name }}"
           curl -vL localhost:8080
 
   test-server-returns-expected-string:
@@ -23,5 +23,5 @@ jobs:
         run: |
           apk add curl grep
           docker pull "kairixir/hello-world-go:${{ github.ref_name }}"
-          docker run -p 8080:8080 "kairixir/hello-world-go:${{ github.ref_name }}"
+          docker run -d -p 8080:8080 "kairixir/hello-world-go:${{ github.ref_name }}"
           curl -sL localhost:8080 && grep 'Hello world!'
