--- a/.github/workflows/system-tests.yaml
+++ b/.github/workflows/system-tests.yaml
@@ -15,6 +15,8 @@ jobs:
       - name: "Run test"
         run: |
           docker run -d -p 8080:8080 "kairixir/hello-world-go:${{ github.ref_name }}"
+          apk add net-tools
+          netstat -tunlp
           sleep 10
           curl -vL localhost:8080
 
