--- a/.github/workflows/build-test-deploy-main.yaml
+++ b/.github/workflows/build-test-deploy-main.yaml
@@ -30,3 +30,7 @@ jobs:
       dockerhub_token: ${{ secrets.DELTA_TASK_DOCKERHUB_PUSH_TOKEN }}
     with:
       ref_name: "latest"
+
+  promote-to-deploy:
+    needs: push-as-latest
+    uses: ./.github/workflows/promote-to-deploy.yaml
