--- a/.github/workflows/promote-to-deploy.yaml
+++ b/.github/workflows/promote-to-deploy.yaml
@@ -13,8 +13,8 @@ jobs:
           ref: deploy
       - name: Merge tested changes to deploy
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.name "actions@github.com"
+          # git config --global user.name "GitHub Actions"
+          # git config --global user.name "actions@github.com"
           git fetch origin main:main
           git merge main --no-ff -m "Merge tested commit $(git rev-parse --short $HEAD)"
           git push origin deploy
