ci: add write permissions to promote-to-deploy job

--- a/.github/workflows/build-test-deploy-main.yaml
+++ b/.github/workflows/build-test-deploy-main.yaml
@@ -34,3 +34,5 @@ jobs:
   promote-to-deploy:
     needs: push-as-latest
     uses: ./.github/workflows/promote-to-deploy.yaml
+    permissions:
+      contents: write
