--- a/.github/workflows/promote-to-deploy.yaml
+++ b/.github/workflows/promote-to-deploy.yaml
@@ -21,8 +21,9 @@ jobs:
           git fetch origin main:main
           git merge main --no-ff -m "Merge tested commit $(git rev-parse --short main)"
           git push origin deploy
-      - name: Merge deploy to main
-        run: |
-          git checkout main
-          git merge origin deploy
-          git push
+
+#      - name: Merge deploy to main
+#        run: |
+#          git checkout main
+#          git merge origin deploy
+#          git push
