--- a/.github/workflows/promote-to-deploy.yaml
+++ b/.github/workflows/promote-to-deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Merge tested changes to deploy
         run: |
           git config --global user.name "GitHub Actions"
-          git config --global user.name "actions@github.com"
+          git config --global user.email "actions@github.com"
           git fetch origin main:main
           git merge main --no-ff -m "Merge tested commit $(git rev-parse --short main)"
           git push origin deploy
